loaded daily data

--- a/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
@@ -86,55 +86,401 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "code_folding": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data of NYSE: DDD\n",
+      "1/172 completed.\n",
+      "Downloading data of NYSE: WUBA\n",
+      "2/172 completed.\n",
+      "Downloading data of NYSE: EGHT\n",
+      "3/172 completed.\n",
+      "Downloading data of NYSE: ATEN\n",
+      "4/172 completed.\n",
+      "Downloading data of NYSE: AAN\n",
+      "5/172 completed.\n",
+      "Downloading data of NYSE: ATU\n",
+      "6/172 completed.\n",
+      "Downloading data of NYSE: AER\n",
+      "7/172 completed.\n",
+      "Downloading data of NYSE: HIVE\n",
+      "8/172 completed.\n",
+      "Downloading data of NYSE: AL\n",
+      "9/172 completed.\n",
+      "Downloading data of NYSE: AYR\n",
+      "10/172 completed.\n",
+      "Downloading data of NYSE: AYX\n",
+      "11/172 completed.\n",
+      "Downloading data of NYSE: AMBR\n",
+      "12/172 completed.\n",
+      "Downloading data of NYSE: AMN\n",
+      "13/172 completed.\n",
+      "Downloading data of NYSE: PLAN\n",
+      "14/172 completed.\n",
+      "Downloading data of NYSE: APY\n",
+      "15/172 completed.\n",
+      "Downloading data of NYSE: AQ\n",
+      "16/172 completed.\n",
+      "Downloading data of NYSE: ANET\n",
+      "17/172 completed.\n",
+      "Downloading data of NYSE: ASX\n",
+      "18/172 completed.\n",
+      "Downloading data of NYSE: ASGN\n",
+      "19/172 completed.\n",
+      "Downloading data of NYSE: AUO\n",
+      "20/172 completed.\n",
+      "Downloading data of NYSE: ATHM\n",
+      "21/172 completed.\n",
+      "Downloading data of NYSE: AVLR\n",
+      "22/172 completed.\n",
+      "Downloading data of NYSE: BHE\n",
+      "23/172 completed.\n",
+      "Downloading data of NYSE: BITA\n",
+      "24/172 completed.\n",
+      "Downloading data of NYSE: BKI\n",
+      "25/172 completed.\n",
+      "Downloading data of NYSE: BB\n",
+      "26/172 completed.\n",
+      "Downloading data of NYSE: BOX\n",
+      "27/172 completed.\n",
+      "Downloading data of NYSE: CACI\n",
+      "28/172 completed.\n",
+      "Downloading data of NYSE: CAI\n",
+      "29/172 completed.\n",
+      "Downloading data of NYSE: CARS\n",
+      "30/172 completed.\n",
+      "Downloading data of NYSE: CSLT\n",
+      "31/172 completed.\n",
+      "Downloading data of NYSE: CLS\n",
+      "32/172 completed.\n",
+      "Downloading data of NYSE: CDAY\n",
+      "33/172 completed.\n",
+      "Downloading data of NYSE: ECOM\n",
+      "34/172 completed.\n",
+      "Downloading data of NYSE: CMCM\n",
+      "35/172 completed.\n",
+      "Downloading data of NYSE: CISN\n",
+      "36/172 completed.\n",
+      "Downloading data of NYSE: CLDR\n",
+      "37/172 completed.\n",
+      "Downloading data of NYSE: CTK\n",
+      "38/172 completed.\n",
+      "Downloading data of NYSE: CLGX\n",
+      "39/172 completed.\n",
+      "Downloading data of NYSE: CTS\n",
+      "40/172 completed.\n",
+      "Downloading data of NYSE: CW\n",
+      "41/172 completed.\n",
+      "Downloading data of NYSE: DQ\n",
+      "42/172 completed.\n",
+      "Downloading data of NYSE: DELL\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n",
-      "Error 1100, reqId -1: Connectivity between IB and Trader Workstation has been lost.\n",
-      "Error 1102, reqId -1: Connectivity between IB and Trader Workstation has been restored - data maintained.\n"
+      "Error 162, reqId 45: Historical Market Data Service error message:No market data permissions for AMEX, ARCA, BATS, BEX, BYX, CHX, DRCTEDGE, EDGEA, IEX, ISE, ISLAND, NYSE, NYSENAT, PSX STK, contract: Stock(symbol='DELL', exchange='SMART', primaryExchange='NYSE', currency='USD')\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error: 43/172 download aborted.\n",
+      "Downloading data of NYSE: DOV\n",
+      "44/172 completed.\n",
+      "Downloading data of NYSE: DXC\n",
+      "45/172 completed.\n",
+      "Downloading data of NYSE: ETN\n",
+      "46/172 completed.\n",
+      "Downloading data of NYSE: ESTC\n",
+      "47/172 completed.\n",
+      "Downloading data of NYSE: ELLI\n",
+      "48/172 completed.\n",
+      "Downloading data of NYSE: DAVA\n",
+      "49/172 completed.\n",
+      "Downloading data of NYSE: EPAM\n",
+      "50/172 completed.\n",
+      "Downloading data of NYSE: EB\n",
+      "51/172 completed.\n",
+      "Downloading data of NYSE: EVTC\n",
+      "52/172 completed.\n",
+      "Downloading data of NYSE: AQUA\n",
+      "53/172 completed.\n",
+      "Downloading data of NYSE: EXTN\n",
+      "54/172 completed.\n",
+      "Downloading data of NYSE: FDS\n",
+      "55/172 completed.\n",
+      "Downloading data of NYSE: SFUN\n",
+      "56/172 completed.\n",
+      "Downloading data of NYSE: FIT\n",
+      "57/172 completed.\n",
+      "Downloading data of NYSE: GDI\n",
+      "58/172 completed.\n",
+      "Downloading data of NYSE: GTES\n",
+      "59/172 completed.\n",
+      "Downloading data of NYSE: GLOB\n",
+      "60/172 completed.\n",
+      "Downloading data of NYSE: GDDY\n",
+      "61/172 completed.\n",
+      "Downloading data of NYSE: GHM\n",
+      "62/172 completed.\n",
+      "Downloading data of NYSE: GWRE\n",
+      "63/172 completed.\n",
+      "Downloading data of NYSE: HHS\n",
+      "64/172 completed.\n",
+      "Downloading data of NYSE: HPE\n",
+      "65/172 completed.\n",
+      "Downloading data of NYSE: HPQ\n",
+      "66/172 completed.\n",
+      "Downloading data of NYSE: HMI\n",
+      "67/172 completed.\n",
+      "Downloading data of NYSE: HUBS\n",
+      "68/172 completed.\n",
+      "Downloading data of NYSE: HUYA\n",
+      "69/172 completed.\n",
+      "Downloading data of NYSE: ITW\n",
+      "70/172 completed.\n",
+      "Downloading data of NYSE: INFY\n",
+      "71/172 completed.\n",
+      "Downloading data of NYSE: IPHI\n",
+      "72/172 completed.\n",
+      "Downloading data of NYSE: NSP\n",
+      "73/172 completed.\n",
+      "Downloading data of NYSE: INST\n",
+      "74/172 completed.\n",
+      "Downloading data of NYSE: IBM\n",
+      "75/172 completed.\n",
+      "Downloading data of NYSE: IPG\n",
+      "76/172 completed.\n",
+      "Downloading data of NYSE: INXN\n",
+      "77/172 completed.\n",
+      "Downloading data of NYSE: JBL\n",
+      "78/172 completed.\n",
+      "Downloading data of NYSE: JT\n",
+      "79/172 completed.\n",
+      "Downloading data of NYSE: JKS\n",
+      "80/172 completed.\n",
+      "Downloading data of NYSE: JBT\n",
+      "81/172 completed.\n",
+      "Downloading data of NYSE: JNPR\n",
+      "82/172 completed.\n",
+      "Downloading data of NYSE: KAI\n",
+      "83/172 completed.\n",
+      "Downloading data of NYSE: KFY\n",
+      "84/172 completed.\n",
+      "Downloading data of NYSE: LLL\n",
+      "85/172 completed.\n",
+      "Downloading data of NYSE: LEAF\n",
+      "86/172 completed.\n",
+      "Downloading data of NYSE: LDOS\n",
+      "87/172 completed.\n",
+      "Downloading data of NYSE: LN\n",
+      "88/172 completed.\n",
+      "Downloading data of NYSE: RAMP\n",
+      "89/172 completed.\n",
+      "Downloading data of NYSE: LXFT\n",
+      "90/172 completed.\n",
+      "Downloading data of NYSE: MX\n",
+      "91/172 completed.\n",
+      "Downloading data of NYSE: MAN\n",
+      "92/172 completed.\n",
+      "Downloading data of NYSE: MAXR\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error 162, reqId 95: Historical Market Data Service error message:No market data permissions for AMEX, ARCA, BATS, BEX, BYX, CHX, DRCTEDGE, EDGEA, IEX, ISE, ISLAND, NYSE, NYSENAT, PSX STK, contract: Stock(symbol='MAXR', exchange='SMART', primaryExchange='NYSE', currency='USD')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 93/172 download aborted.\n",
+      "Downloading data of NYSE: MXL\n",
+      "94/172 completed.\n",
+      "Downloading data of NYSE: MFGP\n",
+      "95/172 completed.\n",
+      "Downloading data of NYSE: MCRN\n",
+      "96/172 completed.\n",
+      "Downloading data of NYSE: MIXT\n",
+      "97/172 completed.\n",
+      "Downloading data of NYSE: MODN\n",
+      "98/172 completed.\n",
+      "Downloading data of NYSE: MSI\n",
+      "99/172 completed.\n",
+      "Downloading data of NYSE: NPTN\n",
+      "100/172 completed.\n",
+      "Downloading data of NYSE: NEWR\n",
+      "101/172 completed.\n",
+      "Downloading data of NYSE: NOK\n",
+      "102/172 completed.\n",
+      "Downloading data of NYSE: NVT\n",
+      "103/172 completed.\n",
+      "Downloading data of NYSE: OMC\n",
+      "104/172 completed.\n",
+      "Downloading data of NYSE: OOMA\n",
+      "105/172 completed.\n",
+      "Downloading data of NYSE: ORCL\n",
+      "106/172 completed.\n",
+      "Downloading data of NYSE: PAGS\n",
+      "107/172 completed.\n",
+      "Downloading data of NYSE: PANW\n",
+      "108/172 completed.\n",
+      "Downloading data of NYSE: PKE\n",
+      "109/172 completed.\n",
+      "Downloading data of NYSE: PAYC\n",
+      "110/172 completed.\n",
+      "Downloading data of NYSE: PNR\n",
+      "111/172 completed.\n",
+      "Downloading data of NYSE: PRSP\n",
+      "112/172 completed.\n",
+      "Downloading data of NYSE: PVTL\n",
+      "113/172 completed.\n",
+      "Downloading data of NYSE: PRO\n",
+      "114/172 completed.\n",
+      "Downloading data of NYSE: PSTG\n",
+      "115/172 completed.\n",
+      "Downloading data of NYSE: QTWO\n",
+      "116/172 completed.\n",
+      "Downloading data of NYSE: QTM\n",
+      "117/172 completed.\n",
+      "Downloading data of NYSE: RHT\n",
+      "118/172 completed.\n",
+      "Downloading data of NYSE: SOL\n",
+      "119/172 completed.\n",
+      "Downloading data of NYSE: RENN\n",
+      "120/172 completed.\n",
+      "Downloading data of NYSE: RXN\n",
+      "121/172 completed.\n",
+      "Downloading data of NYSE: RNG\n",
+      "122/172 completed.\n",
+      "Downloading data of NYSE: RHI\n",
+      "123/172 completed.\n",
+      "Downloading data of NYSE: RST\n",
+      "124/172 completed.\n",
+      "Downloading data of NYSE: SAIL\n",
+      "125/172 completed.\n",
+      "Downloading data of NYSE: CRM\n",
+      "126/172 completed.\n",
+      "Downloading data of NYSE: SAP\n",
+      "127/172 completed.\n",
+      "Downloading data of NYSE: SAIC\n",
+      "128/172 completed.\n",
+      "Downloading data of NYSE: SMI\n",
+      "129/172 completed.\n",
+      "Downloading data of NYSE: SEND\n",
+      "130/172 completed.\n",
+      "Downloading data of NYSE: SQNS\n",
+      "131/172 completed.\n",
+      "Downloading data of NYSE: NOW\n",
+      "132/172 completed.\n",
+      "Downloading data of NYSE: SHOP\n",
+      "133/172 completed.\n",
+      "Downloading data of NYSE: SSTK\n",
+      "134/172 completed.\n",
+      "Downloading data of NYSE: SMAR\n",
+      "135/172 completed.\n",
+      "Downloading data of NYSE: SNAP\n",
+      "136/172 completed.\n",
+      "Downloading data of NYSE: SOGO\n",
+      "137/172 completed.\n",
+      "Downloading data of NYSE: SWI\n",
+      "138/172 completed.\n",
+      "Downloading data of NYSE: SPA\n",
+      "139/172 completed.\n",
+      "Downloading data of NYSE: SPXC\n",
+      "140/172 completed.\n",
+      "Downloading data of NYSE: FLOW\n",
+      "141/172 completed.\n",
+      "Downloading data of NYSE: SQ\n",
+      "142/172 completed.\n",
+      "Downloading data of NYSE: SXI\n",
+      "143/172 completed.\n",
+      "Downloading data of NYSE: SRT\n",
+      "144/172 completed.\n",
+      "Downloading data of NYSE: STM\n",
+      "145/172 completed.\n",
+      "Downloading data of NYSE: SWCH\n",
+      "146/172 completed.\n",
+      "Downloading data of NYSE: SNX\n",
+      "147/172 completed.\n",
+      "Downloading data of NYSE: DATA\n",
+      "148/172 completed.\n",
+      "Downloading data of NYSE: TSM\n",
+      "149/172 completed.\n",
       "Downloading data of NYSE: TLRA\n",
       "150/172 completed.\n",
       "Downloading data of NYSE: TNC\n",
       "151/172 completed.\n",
       "Downloading data of NYSE: TDC\n",
       "152/172 completed.\n",
-      "Downloading data of NYSE: TGH\n"
+      "Downloading data of NYSE: TGH\n",
+      "153/172 completed.\n",
+      "Downloading data of NYSE: RUBI\n",
+      "154/172 completed.\n",
+      "Downloading data of NYSE: TRTN\n",
+      "155/172 completed.\n",
+      "Downloading data of NYSE: TBI\n",
+      "156/172 completed.\n",
+      "Downloading data of NYSE: TWLO\n",
+      "157/172 completed.\n",
+      "Downloading data of NYSE: TWTR\n",
+      "158/172 completed.\n",
+      "Downloading data of NYSE: TYL\n",
+      "159/172 completed.\n",
+      "Downloading data of NYSE: UIS\n",
+      "160/172 completed.\n",
+      "Downloading data of NYSE: UMC\n",
+      "161/172 completed.\n",
+      "Downloading data of NYSE: URI\n",
+      "162/172 completed.\n",
+      "Downloading data of NYSE: VEEV\n",
+      "163/172 completed.\n",
+      "Downloading data of NYSE: VMW\n",
+      "164/172 completed.\n",
+      "Downloading data of NYSE: WBT\n",
+      "165/172 completed.\n",
+      "Downloading data of NYSE: WIT\n",
+      "166/172 completed.\n",
+      "Downloading data of NYSE: WK\n",
+      "167/172 completed.\n",
+      "Downloading data of NYSE: WPP\n",
+      "168/172 completed.\n",
+      "Downloading data of NYSE: XRX\n",
+      "169/172 completed.\n",
+      "Downloading data of NYSE: YEXT\n",
+      "170/172 completed.\n",
+      "Downloading data of NYSE: ZEN\n",
+      "171/172 completed.\n",
+      "Downloading data of NYSE: ZUO\n",
+      "172/172 completed.\n"
      ]
     }
    ],
    "source": [
-    "for i in range(149, len(nyse_tech_names)):\n",
+    "for i in range(len(nyse_tech_names)):\n",
     "    stock_name = nyse_tech_names[i]\n",
     "    \n",
     "    print(\"Downloading data of NYSE: \" + stock_name)\n",
     "    \n",
     "    contract = Stock(stock_name, 'SMART', 'USD', primaryExchange=\"NYSE\")\n",
-    "    bars = ib.reqHistoricalData(contract, endDateTime=\"20190105 04:55:00\", durationStr='4 Y',\n",
-    "            barSizeSetting='5 mins', whatToShow='MIDPOINT', useRTH=True)\n",
+    "    bars = ib.reqHistoricalData(contract, endDateTime=\"20190105 04:55:00\", durationStr='10 Y',\n",
+    "            barSizeSetting='1 day', whatToShow='MIDPOINT', useRTH=True)\n",
     "    \n",
     "    # convert to pandas dataframe:\n",
     "    df = util.df(bars)\n",
-    "    PATH_NAME = \"../ib-data/nyse/\" + str(stock_name) + \".csv\"\n",
+    "    PATH_NAME = \"../ib-data/nyse-daily/\" + str(stock_name) + \".csv\"\n",
     "    \n",
     "    if df is None:\n",
     "        print( \"Error: \" + str(i + 1) + \"/\" + str(len(nyse_tech_names)) + \" download aborted.\")\n",
@@ -823,7 +1169,15 @@
       "431/437 completed.\n",
       "Downloading data of NASDAQ: YNDX\n",
       "432/437 completed.\n",
-      "Downloading data of NASDAQ: YY\n"
+      "Downloading data of NASDAQ: YY\n",
+      "433/437 completed.\n",
+      "Downloading data of NASDAQ: ZBRA\n",
+      "434/437 completed.\n",
+      "Downloading data of NASDAQ: ZIXI\n",
+      "435/437 completed.\n",
+      "Downloading data of NASDAQ: ZS\n",
+      "436/437 completed.\n",
+      "Downloading data of NASDAQ: ZNGA\n"
      ]
     }
    ],
