--- a/jupyter-py/4a-Timestamp-Features.ipynb
+++ b/jupyter-py/4a-Timestamp-Features.ipynb
@@ -88,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def generate_timestamp_features(df):\n",
@@ -1923,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -1935,13 +1937,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "nyse_csv_paths = sorted(glob.glob(\"../ib-data/nyse/*.csv\"))\n",
+    "nyse_csv_paths = sorted(glob.glob(\"../ib-data/nyse-daily/*.csv\"))\n",
     "nasdaq_csv_paths = sorted(glob.glob(\"../ib-data/iex/*.csv\"))"
    ]
   },
@@ -1954,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2150,7 @@
     "    df = generate_timestamp_features(df)\n",
     "    \n",
     "    # save to new file\n",
-    "    PATH_NAME = \"../ib-data/nyse-features/\" + os.path.basename(path)\n",
+    "    PATH_NAME = \"../ib-data/nyse-daily-features/\" + os.path.basename(path)\n",
     "    df.to_csv(path_or_buf=PATH_NAME, index=False)\n",
     "    \n",
     "    # print message\n",
