updated the generate training data part

--- a/model/trading_model.ipynb
+++ b/model/trading_model.ipynb
@@ -10,7 +10,24 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join, splitext\n",
+    "import random\n",
     "\n",
+    "from process_raw_prices import *\n",
+    "\n",
+    "# Some more magic so that the notebook will reload external python modules;\n",
+    "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tf.enable_eager_execution()"
    ]
   },
@@ -58,7 +75,34 @@
     "# dummy initial cash\n",
     "initial_cash = 10000\n",
     "\n",
+    "# processed dataset folder path\n",
+    "dataset_folder_path = '../../dataset/nyse-daily-transformed'\n",
+    "os.makedirs(dataset_folder_path, exist_ok=True)\n",
+    "\n",
+    "# raw dataset files pattern\n",
+    "raw_files_path_pattern = \"../../dataset/nyse-daily/*.csv\"\n",
+    "\n",
+    "df_columns = ['close1', 'close2', 'spread', 'logClose1', 'logClose2', 'zscore']\n",
     "ind = {'y_close': 0, 'x_close': 1, 'spread': 2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute dataset for training\n",
+    "all_pairs_slices = [splitext(f)[0] for f in listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
+    "if len(all_pairs_slices) == 0:\n",
+    "    generate_pairs_training_data(raw_files_path_pattern=raw_files_path_pattern,\n",
+    "                                 result_path=dataset_folder_path,\n",
+    "                                 min_size=252*4,\n",
+    "                                 training_period=52,\n",
+    "                                 points_per_cut=252\n",
+    "                                )\n",
+    "    all_pairs_slices = [splitext(f)[0] for f in listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
+    "print(\"Total number of pair slices: %d\" % len(all_pairs_slices))"
    ]
   },
   {
@@ -73,19 +117,20 @@
     "    three dimension. The first dimension is for time. The second dimension is indexed\n",
     "    by features name. The third dimension is the index of training instance.\n",
     "    \"\"\"\n",
-    "    df = pd.read_csv(\"../../dataset/GOOGL-GOOG-1.csv\")\n",
-    "    history = df[['close1', 'close2', 'spread']].values\n",
-    "    arr = []\n",
-    "    for i in range(batch_size):\n",
-    "        temp = history[i*trading_period:(i+1)*trading_period]\n",
-    "        arr.append(history[i*trading_period:(i+1)*trading_period])\n",
-    "    hist = np.array(arr)\n",
-    "    return np.transpose(hist, (1, 2, 0))\n",
+    "    sample_pair_slices = random.sample(all_pairs_slices, batch_size)\n",
+    "    history = []\n",
+    "    for s in sample_pair_slices:\n",
+    "        df = pd.read_csv(join(dataset_folder_path, s+\".csv\"))\n",
+    "        df_val = df[df_columns].values\n",
+    "        history.append(df_val)\n",
     "    \n",
+    "    history = np.array(history)\n",
+    "    return np.transpose(history, (1, 2, 0))\n",
     "\n",
     "def compute_input_history(history):\n",
     "    \"\"\"Slicing history in its second dimension.\"\"\"\n",
-    "    return history[:,2:,:]\n",
+    "    # no slicing for now\n",
+    "    return history\n",
     "\n",
     "def sample_action(logits, random=False):\n",
     "    if random:\n",
@@ -265,6 +310,8 @@
     "                # no change in portfolio value\n",
     "                r[i] = 0\n",
     "                self.position[i] = 0\n",
+    "                self.quantity['y'][i] = 0.0\n",
+    "                self.quantity['x'][i] = 0.0\n",
     "            elif a == 1: # long the spread: long Y and short X\n",
     "                # quantity of each stock will change when the current position is not previous position\n",
     "                if self.position[i] == 0 or self.position[i] == 2:\n",
@@ -315,11 +362,20 @@
     "        return r\n",
     "    \n",
     "    def update_state(self):\n",
-    "        # concate next_input_history and next position to form next partial state\n",
-    "        partial_state = tf.concat([self.input_history[self.t].T, tf.one_hot(self.position, position_num)], 1)\n",
+    "#         # concate next_input_history and next position to form next partial state\n",
+    "#         partial_state = tf.concat([self.input_history[self.t].T, tf.one_hot(self.position, position_num)], 1)\n",
     "        \n",
-    "        # update state\n",
-    "        self.state = self.state_encoding_model(partial_state)\n",
+    "#         # update state\n",
+    "#         self.state = self.state_encoding_model(partial_state)\n",
+    "\n",
+    "        partial_state = self.input_history[self.t].T\n",
+    "        self.state = tf.concat([\n",
+    "            partial_state,\n",
+    "            self.total_portfolio_value.T,\n",
+    "            self.quantity['y'].T,\n",
+    "            self.quantity['x'].T,\n",
+    "            tf.one_hot(self.position, position_num)\n",
+    "        ], 1)\n",
     "    \n",
     "    def step(self, action):\n",
     "        \"\"\"Given the current state and action, return the reward, next state and done.\n",
