--- a/model/trading_model.ipynb
+++ b/model/trading_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# update batch size\n",
-    "batch_size = 25\n",
+    "batch_size = 100\n",
     "\n",
     "# number of batch in training\n",
-    "num_of_batch = 1000\n",
+    "num_of_batch = 10000\n",
     "\n",
     "# fixed number of time steps in one episode (not used)\n",
-    "trading_period = 1000\n",
+    "trading_period = 200\n",
     "\n",
     "# 1 is zscore\n",
     "num_features = 1\n",
@@ -62,7 +62,7 @@
     "layer1_out_num = 30\n",
     "\n",
     "# learning rate\n",
-    "lr = 5e-3\n",
+    "lr = 1e-3\n",
     "\n",
     "# discount factor in reinforcement learning\n",
     "gamma = 1\n",
@@ -70,7 +70,7 @@
     "# random action probability\n",
     "rand_action_prob = 0.1\n",
     "\n",
-    "batch_per_print = 1\n",
+    "batch_per_print = 50\n",
     "\n",
     "# dummy initial cash\n",
     "initial_cash = 10000\n",
@@ -88,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of pair slices: 26680\n"
+     ]
+    }
+   ],
    "source": [
     "# compute dataset for training\n",
     "all_pairs_slices = [splitext(f)[0] for f in listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
@@ -212,10 +220,10 @@
     "                                      activation=tf.keras.layers.LeakyReLU(),\n",
     "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
     "                                     )\n",
-    "        self.dense4 = tf.layers.Dense(units=layer1_out_num,\n",
-    "                                      activation=tf.keras.layers.LeakyReLU(),\n",
-    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
-    "                                     )\n",
+    "#         self.dense4 = tf.layers.Dense(units=layer1_out_num,\n",
+    "#                                       activation=tf.keras.layers.LeakyReLU(),\n",
+    "#                                       kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "#                                      )\n",
     "        self.logits = tf.layers.Dense(units=a_num,\n",
     "                                      activation=tf.keras.layers.LeakyReLU(),\n",
     "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
@@ -226,7 +234,7 @@
     "        inputs = self.dense1(inputs)\n",
     "        inputs = self.dense2(inputs)\n",
     "        inputs = self.dense3(inputs)\n",
-    "        inputs = self.dense4(inputs)\n",
+    "#         inputs = self.dense4(inputs)\n",
     "        logits = self.logits(inputs)\n",
     "        return logits\n",
     "\n",
@@ -329,7 +337,7 @@
     "                    nex_portfolio_value = lpv\n",
     "\n",
     "                    # forced to take position 0\n",
-    "                    self.postion[i] = 0\n",
+    "                    self.position[i] = 0\n",
     "                else:\n",
     "                    nex_portfolio_value = lpv + spv\n",
     "                    self.position[i] = 1\n",
@@ -352,7 +360,7 @@
     "                    nex_portfolio_value = lpv\n",
     "\n",
     "                    # forced to take position 0\n",
-    "                    self.postion[i] = 0\n",
+    "                    self.position[i] = 0\n",
     "                else:\n",
     "                    nex_portfolio_value = lpv + spv\n",
     "                    self.position[i] = 2\n",
@@ -371,9 +379,9 @@
     "        partial_state = self.input_history[self.t].T\n",
     "        self.state = tf.concat([\n",
     "            partial_state,\n",
-    "            self.total_portfolio_value.T,\n",
-    "            self.quantity['y'].T,\n",
-    "            self.quantity['x'].T,\n",
+    "            np.array([self.total_portfolio_value,\n",
+    "                      self.quantity['y'],\n",
+    "                      self.quantity['x']]).T,\n",
     "            tf.one_hot(self.position, position_num)\n",
     "        ], 1)\n",
     "    \n",
@@ -400,14 +408,33 @@
     "        # compute s_(t+1)\n",
     "        self.update_state()\n",
     "\n",
-    "        return r, self.state, self.t+1 == trading_period"
+    "        return r, self.state, (self.t+1) == trading_period"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch id: 49, average_total_r_per_ep: 912.6810631533646\n",
+      "batch id: 99, average_total_r_per_ep: 6369.387419848298\n",
+      "batch id: 149, average_total_r_per_ep: 4304.843791573594\n",
+      "batch id: 199, average_total_r_per_ep: 1616.3958432465963\n",
+      "batch id: 249, average_total_r_per_ep: 1968.2470023876886\n",
+      "batch id: 299, average_total_r_per_ep: 8116.823740783895\n",
+      "batch id: 349, average_total_r_per_ep: 4978.984674269739\n",
+      "batch id: 399, average_total_r_per_ep: 31286.0604554838\n",
+      "batch id: 449, average_total_r_per_ep: 10075.020971162792\n",
+      "batch id: 499, average_total_r_per_ep: 3362.981144209523\n",
+      "batch id: 549, average_total_r_per_ep: 10575.747215295096\n",
+      "batch id: 599, average_total_r_per_ep: 9064.293520612835\n"
+     ]
+    }
+   ],
    "source": [
     "pi = TradingPolicyModel()\n",
     "state_encoding_model = StateEncodingModel()\n",
@@ -440,7 +467,9 @@
     "            \n",
     "            average_total_r += r\n",
     "            \n",
-    "#             # debugging\n",
+    "            # debugging\n",
+    "#             print(env.t)\n",
+    "#             print(env.t+1==200)\n",
     "#             print(r[0])\n",
     "#             print(env.total_portfolio_value[0])\n",
     "#             print(done)\n",
@@ -451,14 +480,14 @@
     "        \n",
     "        # compute cummulative rewards for each action\n",
     "        all_cum_rewards = discount_rewards(all_rewards_stack, all_actions_stack.numpy())\n",
-    "#         all_cum_rewards -= np.mean(all_cum_rewards)\n",
-    "#         all_cum_rewards /= np.std(all_cum_rewards)\n",
+    "        all_cum_rewards -= np.mean(all_cum_rewards)\n",
+    "        all_cum_rewards /= np.std(all_cum_rewards)\n",
     "        all_cum_rewards = tf.convert_to_tensor(all_cum_rewards, dtype=tf.float32)\n",
     "\n",
     "        loss_value = loss(all_logits_stack, all_actions_stack, all_cum_rewards)\n",
     "    \n",
     "    if (batch+1) % batch_per_print == 0:\n",
-    "        print(\"batch id: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r)/batch_per_print))\n",
+    "        print(\"batch id: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r/batch_per_print)))\n",
     "        average_total_r = np.zeros(batch_size)\n",
     "    \n",
     "    grads = gt.gradient(loss_value, state_encoding_model.variables + pi.variables)\n",
@@ -502,9 +531,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Intel, 2018 update 2)",
    "language": "python",
-   "name": "python3"
+   "name": "c009-intel_distribution_of_python_3_2018u2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -516,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
